--- a/src/__new/js/view/worldWind/layers/layerTools/LayerToolIcon.css
+++ b/src/__new/js/view/worldWind/layers/layerTools/LayerToolIcon.css
@@ -3,20 +3,31 @@
 	display: inline-block;
 	position: relative;
 	float: right;
-	margin: 0 .2rem;
+	margin: 0 .15rem;
 	height: 100%;
+	width: 1rem;
 }
-.layer-tool-icon i {
-	color: rgba(104,103,116,.65);
-	display: inline-block;
-	font-size: .9rem;
-	font-family: "FontAwesome";
-	transition: color .3s ease-out;
-	vertical-align: middle;
+.layer-tool-icon.legend-icon img.active {
+	display: none;
 }
-.layer-tool-icon:hover i {
-	color: rgba(104,103,116,1);
+.layer-tool-icon.legend-icon.open img {
+	display: none;
 }
-.layer-tool-icon.open i {
-	color: #ad2738;
+.layer-tool-icon.legend-icon.open img.active {
+	display: block;
 }
+
+/*.layer-tool-icon i {*/
+	/*color: rgba(104,103,116,.65);*/
+	/*display: inline-block;*/
+	/*font-size: .9rem;*/
+	/*font-family: "FontAwesome";*/
+	/*transition: color .3s ease-out;*/
+	/*vertical-align: middle;*/
+/*}*/
+/*.layer-tool-icon:hover i {*/
+	/*color: rgba(104,103,116,1);*/
+/*}*/
+/*.layer-tool-icon.open i {*/
+	/*color: #ad2738;*/
+/*}*/
