--- a/src/__new/js/view/worldWind/layers/layerTools/LayerToolFloater.css
+++ b/src/__new/js/view/worldWind/layers/layerTools/LayerToolFloater.css
@@ -5,9 +5,10 @@
 	min-height: 100px;
 	height: auto;
 	width: 300px;
-	left: 350px;
+	left: auto;
+	bottom: 35px;
 	top: auto;
-	bottom: 50px;
+	right: 590px;
 }
 
 .tool-window.layer-tool-floater.open {
