Custom layers: file minor fixes

--- a/src/__new/styles/style.css
+++ b/src/__new/styles/style.css
@@ -246,6 +246,10 @@ label.container > input {
 	margin: 20px 0;
 }
 
+#custom-layers-action .ptr-btn-group {
+	margin-top: 20px;
+}
+
 .custom-layers-status {
 	padding: 5px 0;
 }
