--- a/src/__new/styles/style.css
+++ b/src/__new/styles/style.css
@@ -161,7 +161,7 @@ body.mode-3d .settings-window {
     display: none;
 }
 
-#window-legacyAdvancedFilters .x-box-inner {
+#window-legacyAdvancedFilters .tools-filters-list > .x-box-inner {
 	overflow-y: auto;
 }
 
