--- a/src/__new/js/view/PanelIFrame/PanelIFrame.css
+++ b/src/__new/js/view/PanelIFrame/PanelIFrame.css
@@ -1,3 +1,9 @@
+body.application #sidebar-reports.snow-mode {
+	width: 900px;
+}
+body.application #sidebar-reports.snow-mode.hidden {
+	right: -900px;
+}
 #app-extra-content > iframe {
 	width: 100%;
 	height: 100%;
