--- a/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
+++ b/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
@@ -1,6 +1,7 @@
-<div class="floater-row">
-	<div class="widget-button" id="evaluation-confirm"></div>
+<div class="floater-row footer-buttons">
+	<div class="widget-button hidden" id="evaluation-confirm"></div>
 	<div class="widget-button" id="evaluation-unselect" disabled="disabled">Clear selection</div>
+	<div class="widget-button secondary {{hidden}}" id="evaluation-add-category" disabled="disabled">Add category</div>
 </div>
 <div class="floater-row row-export">
 	<div class="widget-button widget-button-export" id="export-json" disabled="disabled">Export to GeoJSON</div>
