--- a/src/__new/styles/style.css
+++ b/src/__new/styles/style.css
@@ -28,6 +28,16 @@
     text-transform: uppercase;
     transition: background .3s ease-out;
 }
+.widget-button.w8 {
+	width: 10rem;
+}
+.widget-button.w10 {
+	width: 10rem;
+}
+.widget-button.small {
+	text-transform: none;
+}
+
 .widget-button:hover, .widget-button.active {
     background: #ad2738;
     cursor: pointer;
