--- a/src/__new/js/view/worldWind/WorldWindMap.css
+++ b/src/__new/js/view/worldWind/WorldWindMap.css
@@ -1,31 +1,16 @@
-#world-wind-container {
-	display: none;
+.world-wind-map-box {
 	background: black url("../../../img/night-sky.jpg") top left no-repeat;
 	background-size: cover;
-	position: relative;
-	z-index: 5555;
+	width: 100%;
+	height: 100%;
 }
-body.mode-3d #world-wind-container {
-	display: block;
-}
-#world-wind-map {
+.world-wind-map {
 	position: relative;
 	left: 0;
 	height: 100%;
-}
-#world-wind-map.docked {
-	left: 22rem;
-}
-#world-wind-map.charts-hidden {
-	left: 0;
 	width: 100%;
 }
-#world-wind-map.docked.charts-hidden {
-	left: 22rem;
-	width: calc(100% - 22rem);
-	height: 100%;
-}
-#world-wind-canvas {
+.world-wind-canvas {
 	width: 100%;
 	height: 100%;
 }
