--- a/src/__new/js/view/mapsContainer/MapsContainer.css
+++ b/src/__new/js/view/mapsContainer/MapsContainer.css
@@ -1,10 +1,40 @@
 .maps-container {
-	background: red;
+	background: #ccc;
 	display: none;
+	flex-wrap: wrap;
 	position: relative;
 	z-index: 5555;
 	width: 100%;
 }
 body.mode-3d .maps-container {
 	display: block;
+}
+.world-wind-map-box {
+	background: black url("../../../img/night-sky.jpg") top left no-repeat;
+	display: inline-block;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	vertical-align: top;
+}
+
+/* maps container grid */
+.maps-container.w2 .world-wind-map-box {
+	height: 50%;
+}
+.maps-container.w3 .world-wind-map-box {
+	height: 33.33%;
+}
+.maps-container.w4 .world-wind-map-box
+{
+	height: 25%;
+}
+.maps-container.h2 .world-wind-map-box {
+	width: 50%;
+}
+.maps-container.h3 .world-wind-map-box {
+	width: 33.33%;
+}
+.maps-container.h4 .world-wind-map-box {
+	width: 25%;
 }
