--- a/src/__new/js/view/mapsContainer/MapsContainer.css
+++ b/src/__new/js/view/mapsContainer/MapsContainer.css
@@ -11,6 +11,8 @@ body.mode-3d .maps-container {
 }
 .world-wind-map-box {
 	background: black url("../../../img/night-sky.jpg") top left no-repeat;
+	border-right: 1px solid #444;
+	border-bottom: 1px solid #444;
 	display: inline-block;
 	width: 100%;
 	height: 100%;
@@ -19,22 +21,22 @@ body.mode-3d .maps-container {
 }
 
 /* maps container grid */
-.maps-container.w2 .world-wind-map-box {
+.maps-container.h2 .world-wind-map-box {
 	height: 50%;
 }
-.maps-container.w3 .world-wind-map-box {
+.maps-container.h3 .world-wind-map-box {
 	height: 33.33%;
 }
-.maps-container.w4 .world-wind-map-box
+.maps-container.h4 .world-wind-map-box
 {
 	height: 25%;
 }
-.maps-container.h2 .world-wind-map-box {
+.maps-container.w2 .world-wind-map-box {
 	width: 50%;
 }
-.maps-container.h3 .world-wind-map-box {
+.maps-container.w3 .world-wind-map-box {
 	width: 33.33%;
 }
-.maps-container.h4 .world-wind-map-box {
+.maps-container.w4 .world-wind-map-box {
 	width: 25%;
 }
