--- a/src/__new/js/view/worldWind/WorldWindMap.html
+++ b/src/__new/js/view/worldWind/WorldWindMap.html
@@ -1,4 +1,4 @@
-<div class="world-wind-map-box">
+<div class="world-wind-map-box" id="{{id}}-box" >
 	<div id="{{id}}" class="world-wind-map">
 		<canvas id="{{id}}-canvas" class="world-wind-canvas">
 			Your browser does not support HTML5 Canvas.
