--- a/src/__new/js/view/mapsContainer/MapsContainer.css
+++ b/src/__new/js/view/mapsContainer/MapsContainer.css
@@ -14,6 +14,7 @@ body.mode-3d .maps-container {
 	border-right: 1px solid #888;
 	border-bottom: 1px solid #888;
 	display: inline-block;
+	position: relative;
 	width: 100%;
 	height: 100%;
 	margin: 0;
