--- a/src/__new/js/view/worldWind/WorldWindMap.css
+++ b/src/__new/js/view/worldWind/WorldWindMap.css
@@ -8,3 +8,23 @@
 	width: 100%;
 	height: 100%;
 }
+.close-map-button {
+	cursor: pointer;
+	position: absolute;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	left: 0;
+	top: 0;
+	width: 1.3rem;
+	height: 1.3rem;
+	z-index: 1;
+}
+.close-map-icon {
+	color: rgba(80,87,94,.7);
+	font-size: 1rem;
+	transition: color .3s ease-in-out;
+}
+.close-map-icon:hover {
+	color: rgba(80,87,94,1);
+}
