Widget refactoring & PeriodsWidget

--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -88,7 +88,7 @@
     z-index: 10000;
 }
 
-.floater.open {
+body.application .floater.open {
     display: block;
     height: 28rem;
 }
@@ -112,24 +112,12 @@
     position: relative;
     cursor: move;
 }
-.floater-header .widget-undock, .floater-header .widget-dock {
-    display: none;
+.floater.inverse .floater-header {
+    background: rgba(255,255,255,.9);
+    color: #444;
 }
-.floater.dockable.docked {
-    position: relative;
-    float: left;
-}
-.floater.dockable.docked .floater-header  {
-    cursor: default;
-}
-.floater.dockable .floater-header .widget-dock {
-    display: block;
-}
-.floater.dockable.docked .floater-header .widget-dock {
-    display: none;
-}
-.floater.dockable.docked .floater-header  .widget-undock {
-    display: block;
+.floater.inverse .floater-header > span {
+    color: #444;
 }
 .floater-body {
     padding: .5rem;
