--- a/src/__new/js/view/mapsContainer/MapsContainer.css
+++ b/src/__new/js/view/mapsContainer/MapsContainer.css
@@ -9,10 +9,14 @@
 body.mode-3d .maps-container {
 	display: block;
 }
+.maps-container .map-fields {
+	width: 100%;
+	height: 100%;
+}
 .world-wind-map-box {
 	background: black url("../../../img/night-sky.jpg") top left no-repeat;
-	border-right: 1px solid #888;
 	border-bottom: 1px solid #888;
+	border-right: 1px solid #888;
 	display: inline-block;
 	position: relative;
 	width: 100%;
@@ -28,8 +32,7 @@ body.mode-3d .maps-container {
 .maps-container.h3 .world-wind-map-box {
 	height: 33.33%;
 }
-.maps-container.h4 .world-wind-map-box
-{
+.maps-container.h4 .world-wind-map-box {
 	height: 25%;
 }
 .maps-container.w2 .world-wind-map-box {
@@ -40,4 +43,20 @@ body.mode-3d .maps-container {
 }
 .maps-container.w4 .world-wind-map-box {
 	width: 25%;
+}
+/* delete right border for all maps on the right */
+.maps-container.h1.w1 .map-fields .world-wind-map-box {
+	border-bottom: 0;
+	border-right: 0;
+}
+.maps-container.w1.h2 .map-fields .world-wind-map-box,
+.maps-container.w2.h1 .map-fields .world-wind-map-box:nth-child(2n),
+.maps-container.w2.h2 .map-fields .world-wind-map-box:nth-child(2n),
+.maps-container.w2.h3 .map-fields .world-wind-map-box:nth-child(2n),
+.maps-container.w3.h2 .map-fields .world-wind-map-box:nth-child(3n),
+.maps-container.w3.h3 .map-fields .world-wind-map-box:nth-child(3n),
+.maps-container.w3.h4 .map-fields .world-wind-map-box:nth-child(3n),
+.maps-container.w4.h3 .map-fields .world-wind-map-box:nth-child(4n),
+.maps-container.w4.h4 .map-fields .world-wind-map-box:nth-child(4n){
+	border-right: 0;
 }
