--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -88,10 +88,22 @@
     z-index: 10000;
 }
 
+/* floater modes*/
 body.application .floater.open {
     display: block;
     height: 28rem;
 }
+body.mode-3d .floater.only-2d.open {
+    display: none;
+}
+body.application .floater.only-3d.open {
+    display: none;
+}
+body.mode-3d .floater.only-3d.open {
+    display: block;
+}
+
+
 .floater.active {
     z-index: 10001;
 }
