--- a/src/__new/js/view/components/Select/MultiSelect.css
+++ b/src/__new/js/view/components/Select/MultiSelect.css
@@ -2,6 +2,7 @@
 	min-width: 5rem;
 }
 .select-multi-container.onlyArrow {
+	cursor: pointer;
 	min-width: 2rem;
 	min-height: 28px;
 	max-height: 28px;
@@ -11,7 +12,6 @@
 	display: none;
 }
 .select-multi-container.onlyArrow:before {
-	content: "\f0d7";
 	color: #888;
 	font-family: FontAwesome;
 	font-size: .85rem;
@@ -19,6 +19,12 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+.select-multi-container.onlyArrow[aria-expanded=false]:before{
+	content: "\f0d7";
+}
+.select-multi-container.onlyArrow[aria-expanded=true]:before{
+	content: "\f0d8";
 }
 .select-multi-dropdown {
 	min-width: 5rem;
