--- a/src/__new/js/view/components/Select/MultiSelect.html
+++ b/src/__new/js/view/components/Select/MultiSelect.html
@@ -1,1 +1,1 @@
-<select title="{{title}}" id="{{id}}" class="select-multiple"></select>
+<select title="{{title}}" id="{{id}}" class="select-multiple {{classes}}"></select>
