--- a/src/__new/js/view/components/Select/Select.html
+++ b/src/__new/js/view/components/Select/Select.html
@@ -1,1 +1,1 @@
-<select title="{{title}}" id="{{id}}" class="select-simple"></select>
+<select title="{{title}}" id="{{id}}" class="select-simple {{classes}}"></select>
