--- a/src/__new/js/view/worldWind/WorldWindMap.css
+++ b/src/__new/js/view/worldWind/WorldWindMap.css
@@ -8,28 +8,45 @@
 	width: 100%;
 	height: 100%;
 }
-.close-map-button {
-	border-bottom-right-radius: .1rem;
-	cursor: pointer;
+.map-window-tools {
 	position: absolute;
+	display: flex;
+	top: 0;
+	left: 0;
+}
+
+/* close button */
+.close-map-button {
+	background: rgba(244,243,239,.9);
+	border-right: 1px solid rgba(80,87,94,.3);
+	cursor: pointer;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	left: 0;
-	top: 0;
-	width: 1.3rem;
-	height: 1.3rem;
+	width: 1.5rem;
+	height: 1.5rem;
 	z-index: 1;
 	transition: background .3s ease-in-out;
 }
 .close-map-icon {
-	color: rgba(80,87,94,.8);
+	color: rgba(80,87,94,.9);
 	font-size: .9rem;
 	transition: color .3s ease-in-out;
 }
 .close-map-button:hover {
-	background: rgba(244,243,239,.7);
+	background: rgba(214,213,219,.9);
 }
 .close-map-button:hover .close-map-icon {
 	color: rgba(80,87,94,1);
+}
+
+/* period label */
+.map-period-label {
+	background: rgba(244,243,239,.9);
+	color: rgba(80,87,94,.9);
+	font-weight: 600;
+	font-size: .9rem;
+	height: 1.5rem;
+	line-height: 1.4rem;
+	padding: 0 .5rem;
 }
