--- a/src/css/project/snow.css
+++ b/src/css/project/snow.css
@@ -76,7 +76,8 @@
 }
 
 body.mode-3d #top-toolbar-3dmap:not(.world-wind-2d),
-.snow #top-toolbar-features .item.open {
+.snow #top-toolbar-features .item.open,
+.snow .snow-table-caption {
 	color: rgba(26,128,182,1);
 }
 
@@ -86,4 +87,12 @@ body.mode-3d #top-toolbar-3dmap:not(.world-wind-2d),
 }
 .snow #top-toolbar-3dmap {
 	display: none !important;
+}
+
+.snow .floater-header,
+.snow .widget-button {
+	background: rgba(26,128,182,1);
+}
+.snow .widget-button:hover {
+	background: rgba(7,102,153,1);
 }
