--- a/src/css/project/snow.css
+++ b/src/css/project/snow.css
@@ -91,8 +91,8 @@ body.mode-3d #top-toolbar-3dmap:not(.world-wind-2d),
 
 .snow .floater-header,
 .snow .widget-button {
-	background: rgba(26,128,182,1);
+	background: #27618e;
 }
 .snow .widget-button:hover {
-	background: rgba(7,102,153,1);
+	background: rgba(26,128,182,1);
 }
