--- a/src/css/project/snow.css
+++ b/src/css/project/snow.css
@@ -96,3 +96,6 @@ body.mode-3d #top-toolbar-3dmap:not(.world-wind-2d),
 .snow .widget-button:hover {
 	background: rgba(26,128,182,1);
 }
+.snow .new-table {
+	width: 100%;
+}
