Highlight active items in top-bar tools menu.

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -691,9 +691,11 @@ html.dromas body.intro #intro-overlay {
 }
 #top-toolbar .item.open {
     /* background: #ffe6e9; */
+    background-color: #FCFCFA;
     color: #c92d42;
 }
 body.mode-3d #top-toolbar-3dmap {
+	background-color: #FCFCFA;
     color: #c92d42;
 }
 #top-toolbar .item:not(.disabled) {
@@ -701,6 +703,9 @@ body.mode-3d #top-toolbar-3dmap {
 }
 #top-toolbar .item:not(.disabled):hover {
 	background: rgba(125,125,125,.15);
+}
+#top-toolbar .item.open:not(.disabled):hover {
+	background: rgba(245,245,245,.75);
 }
 #top-toolbar .item.disabled {
 	color: #bbb;
