--- a/src/__new/js/view/PanelIFrame/PanelIFrame.css
+++ b/src/__new/js/view/PanelIFrame/PanelIFrame.css
@@ -5,6 +5,9 @@ body.application #sidebar-reports.snow-mode {
 body.application #sidebar-reports.snow-mode.show-map {
 	width: 800px;
 }
+body.application #sidebar-reports.snow-mode.show-map.hidden {
+	width: 0;
+}
 #app-extra-content > iframe {
 	width: 100%;
 	height: 100%;
