Snow#tour setup

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -782,6 +782,9 @@ body.mode-3d #top-toolbar-3dmap:not(.world-wind-2d) {
 #top-toolbar .item#top-toolbar-snow-configuration::before {
 	content: '\f085';
 }
+#top-toolbar .item#top-toolbar-tour::before {
+	content: '\f128';
+}
 
 
 /* Sidebar tools */
